# mfence

./: .gitignore  .secrets.baseline  Dockerfile  README.md  docker-compose.yaml  dockerrun.sh  nginx.conf  prometheus.yml  pyproject.toml  stackhawk.yml  uwsgi-local-run.ini  uwsgi.ini
grafana-provisioning/dashboards/: dashboards.yaml  simple_test.json
grafana-provisioning/datasources/: datasource.yml
src/mfence/: __init__.py  wsgi.py
src/mfence/blueprints/: another_test.py  metrics.py  other_metrics.py  test.py
src/mfence/views/: hello.py
