[tool.poetry]
name = "mfence"
version = "0.1.0"
description = ""
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
flask_cors = "^3.0.8"
prometheus_client = "^0.5.0"
prometheus-flask-exporter = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
